tests/snapshots/wallets/status/exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - status
    - wallet
---
success: true
exit_code: 0
----- stdout -----
{
  "locked": false,
  "walletName": "wallet"
}

----- stderr -----
