tests/snapshots/wallets/status/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - status
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <WALLET_NAME>

Usage: kermit wallets status <WALLET_NAME>

For more information, try '--help'.
