tests/snapshots/wallets/status/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - status
    - foo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: foo not found
